# credit-risk-system

./: .env.example  .env.production  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  create_admin.py  deploy-production.sh  deploy.sh  docker-compose.initial.yml  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  .flake8  Dockerfile  create_test_user.py  credit_risk_model.pkl  init.sql  main.py  model_info.json  pyproject.toml  requirements.txt  run.py  test_backend.py  test_features.py  threshold_optimization.txt
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  ml_model.py  models.py  schemas.py
docs/: DEPLOYMENT.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  Login.tsx  PredictionForm.tsx  PredictionHistory.tsx  Register.tsx
frontend/src/services/: api.ts
nginx/: nginx-initial.conf  nginx-production.conf  nginx.conf  proxy_params
